# gnome-shell-extension-screenshot-window-sizer

./: .gitignore  AUTHORS  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  extension.js  metadata.json  org.gnome.shell.extensions.screenshot-window-sizer.gschema.xml
schemas/: org.gnome.extensions.rhughes.screenshot-window-sizer.gschema.xml
