AC_PREREQ(2.63)
# the version needs to be in sync with the gnome shell version
AC_INIT([gnome-shell-extension-screenshot-window-sizer],[2.0],[https://github.com/hughsie/gnome-shell-extension-screenshot-window-sizer/issues])

AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR([config])

AM_INIT_AUTOMAKE([1.10 dist-xz no-dist-gzip foreign tar-ustar])

m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

GLIB_GSETTINGS

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
